Fix-150: Fixed primary menu vertial alignment.

--- a/scss/trema/header.scss
+++ b/scss/trema/header.scss
@@ -154,6 +154,7 @@
             color: #666;
             border-top: 3px solid transparent;
             transition: all ease-in 300ms;
+            margin-top: 4px;
             &.active {
                 font-weight: normal;
                 color: rgba(0, 0, 0, .9);
